hwcentral/static/css/index.css
#root_body {
    padding: 0px;
    margin: 0px;
    color: #fff;
    font-size: 25px;
    font-family: 'Lato', sans-serif;
}

a, a:hover, a:focus {
    color: #000;
    text-decoration: none;
}

a:hover {
    cursor: hand;
    cursor: pointer;
}

#top-bg-img {
    position: fixed;
    width: 100%;
    height: 100%;
    z-index: -9999;
    background: url('../img/index/blackboard-dark.jpg') repeat-y;
    background-size: cover;
}

/***************

////// DIV1

***************/

#horizontaldiv1 #fronter {
    margin-left: 0px;
    padding: 100px;
    width: 992px;
    text-align: left;
}

#fronter #fronter_buttons #contactus_button {
    margin-left: 25px;
    padding: 20px;
    background-color: #008B8B;
}

#fronter #fronter_buttons #loginbutton {
    padding: 20px 40px;
    background-color: #228B22;
}

#fronter #fronter_mid {
    padding: 60px 0px 0px;
    text-align: center;
}

#fronter #fronter_mid .glyphicon {
    font-size: 100px;
}

#fronter #fronter_mid #evaluate-img1.glyphicon {
    font-size: 75px;
    top: 10px;
    left: 12px;
}

#fronter #fronter_mid #evaluate-img2.glyphicon {
    top: -20px;
    left: -13px;
}

#fronter #fronter_mid #assign-img.glyphicon, #fronter #fronter_mid #analyse-img.glyphicon {
    left: -3px;
}

#fronter #fronter_top #titletagholder {
    margin-left: -30px;
    margin-top: 25px;
}

#fronter #fronter_top #hwcentraltitle {
    font-size: 64px;
}

#fronter #fronter_top #hwcentraltag {
    font-size: 26px;
    margin-top: 10px;
}

#fronter #fronter_top #hwcentrallogo {
    width: 150px;
    height: 150px;
}

#fronter #fronter_buttons {
    margin: 0px;
    padding: 60px 0px 0px;
    font-size: 22px;
}

/***************

////// DIV2

***************/

#horizontaldiv2 {
    background-color: white;
}

#horizontaldiv2 #vid-holder {
    padding: 40px;
    max-width: 992px;
    margin: 0px auto;
}

/***************

////// DIV3

***************/

#horizontaldiv3 #drivencolumn {
    background: url("../img/index/teacher.jpg");
    background-size: cover;
}

#horizontaldiv3 #drivercolumn {
    padding: 30px;
    text-align: justify;
}

#horizontaldiv3 #drivercolumn #quick_intro {
    font-weight: 500;
    font-size: 30px;
}

#horizontaldiv3 #drivercolumn #feature_list {
    margin-top: 25px;
    font-size: 23px;
}

#horizontaldiv3 #drivercolumn #feature_list > ul {
    padding-left: 37px;
}

#horizontaldiv3 #drivercolumn #feature_list > ul > li {
    padding: 10px 0px;
}

#horizontaldiv3 #drivercolumn #feature_list > ul > li:before {
    /*Using a Bootstrap glyphicon as the bullet point*/
    content: "\e233";
    font-family: 'Glyphicons Halflings';
    font-size: 25px;
    position: absolute;
    left: 31px;
    margin-top: 2px;
}

#teacher-img-mobile {
    display: none;
    max-height: 450px;
    overflow-y: hidden;
}

/***************

////// DIV4

***************/

#horizontaldiv4 {
    background-color: rgba(245, 245, 245, 0.95);
    text-align: center;
    padding: 40px;
}

#horizontaldiv4 h1 {
    color: #000;
    margin-top: 0px;
}

#horizontaldiv4 #enquirer_form #enquiry_submit_button {
    background-color: #000;
    border: 1px solid #000;
    padding-left: 0px;
    padding-right: 0px;
    color: #fff;
}

#horizontaldiv4 #enquirer_form input {
    line-height: 30px;
    padding: 5px;
    width: 400px;
    margin-top: 10px;
    color: #000;
}

#horizontaldiv4 #enquirer_form {
    margin-top: 20px;
    font-size: 19px;
    font-weight: 100;
}

#horizontaldiv4 #enquirer_form ul.errorlist {
    display: inline;
    padding: 0px; /*override default ul style*/
}

#horizontaldiv4 #enquirer_form ul.errorlist li {
    position: absolute;
    color: red;
    font-style: italic;
    font-size: small;
    display: inline;
    margin-top: 25px;
    margin-left: 5px;
}

/***************

////// FOOTER

***************/

#footer {
    text-align: center;
    padding: 30px;
}

#footer a, #footer a:hover, #footer a:focus {
    color: #fff;
}

#footer a:hover {
    text-decoration: underline;
}

#toast {
    color: #000;
    font-size: 15px;
}

/***************

////// MEDIA QUERIES

***************/

@media screen and (max-width: 1199px) {
    #teacher-img-mobile {
        display: block;
    }

    #horizontaldiv3 #drivencolumn {
        display: none;
    }
}

@media screen and (max-width: 991px) {
    #horizontaldiv1 #fronter {
        width: 100%;
        margin: 0px;
        padding: 20px 20px 40px;
        text-align: center;
    }

    #fronter #fronter_top #titletagholder {
        margin-left: 0px;
        margin-top: 0px;
    }

    #fronter #fronter_mid {
        max-width: 550px;
        margin: 0px auto;
    }

    #horizontaldiv3 #drivercolumn #quick_intro {
        font-size: 27px;
    }

    #horizontaldiv3 #drivercolumn #feature_list {
        font-size: 20px;
    }

    #horizontaldiv3 #drivercolumn #feature_list > ul > li:before {
        margin-top: 0px;
    }

    #horizontaldiv4 h1 {
        font-size: 28px;
    }

    #horizontaldiv4 #enquirer_form {
        font-size: 16px;
    }

    #horizontaldiv4 #enquirer_form input {
        width: 50%;
    }
}

@media screen and (max-width: 600px) {
    #fronter #fronter_mid, #fronter #fronter_buttons #contactus_button {
        display: none;
    }

    #fronter #fronter_top #hwcentraltitle {
        font-size: 40px;
    }

    #fronter #fronter_top #hwcentraltag {
        font-size: 22px;
    }

    #fronter #fronter_buttons #loginbutton {
        padding: 20px 30px;
        font-size: 20px;
    }

    #fronter #fronter_buttons {
        padding-top: 40px;
    }

    #horizontaldiv2 #vid-holder {
        padding: 10px;
    }

    #horizontaldiv3 #drivercolumn #quick_intro {
        font-size: 20px;
    }

    #horizontaldiv3 #drivercolumn #feature_list {
        font-size: 15px;
        margin-top: 15px;
    }

    #horizontaldiv4 #enquirer_form input {
        width: 250px;
    }

    #footer {
        font-size: 19px;
    }
}

